<resources>
    <string name="app_name">BlitzCommute</string>
    <string name="title_activity_fare_settings">FareSettingsActivity</string>
    <string name="peso_per_km">peso per kilometer</string>
    <string name="peso_per_min">peso per minute</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">sample@domain.com</string>
    <string name="phoneNumber">-- --- -----</string>

    <string name="shared_preferences_filename">fareSettings</string>
    <string name="sp_tricycle_switch_state_name">tricycleSwitchState</string>
    <string name="sp_taxi_switch_state_name">taxiSwitchState</string>
    <string name="sp_jeep_switch_state_name">jeepSwitchState</string>
    <string name="sp_tricycle_ppk_name">tricyclePPK</string>
    <string name="sp_tricycle_ppt_name">tricyclePPT</string>
    <string name="sp_taxi_ppk_name">taxiPPK</string>
    <string name="sp_taxi_ppt_name">taxiPPT</string>
    <string name="sp_jeep_ppk_name">jeepPPK</string>
    <string name="sp_jeep_ppt_name">jeepPPT</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello World</string>
    <string-array name="main_drawer_options">
        <item>Edit Profile</item>
        <item>Fare Settings</item>
        <item>Reset Fare</item>
    </string-array>

    <string name="edit_profile">Edit Profile</string>
    <string name="fare_settings">Fare Settings</string>
    <string name="reset_fare">Reset Fare</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>Home</item>
        <item>Friends</item>
        <item>Notifications</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="json_test">JSON Test</string>
    <string name="title_activity_jsontest">JSONTestActivity</string>
    <string name="sync_account">Synchronize Account</string>
    <string name="show_json">Show JSON Script</string>
    <string name="action_request_image">Request Image</string>


</resources>
