<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:id="@+id/group_toolbar_items">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:orderInCategory="100"
            android:title="@string/action_search"
            android:visible="false"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_sync_account"
            android:icon="@drawable/ic_action_reload"
            android:orderInCategory="100"
            android:title="@string/sync_account"
            android:visible="false"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_show_json_script"
            android:orderInCategory="100"
            android:title="@string/show_json"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_request_image"
            android:orderInCategory="100"
            android:title="@string/action_request_image"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            android:visible="false"
            app:showAsAction="never" />
    </group>
</menu>