<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/profile_toolbar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_toolbar"
        android:padding="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_profile" />

            <ImageButton
                android:id="@+id/cameraButton"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/profileImage"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/camera" />

            <ImageView
                android:id="@+id/jsonTestImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@layout/border"
                android:scaleType="fitXY" />
            <!--<com.android.volley.toolbox.NetworkImageView-->
            <!--android:id="@+id/jsonTestImage"-->
            <!--android:layout_width="70dp"-->
            <!--android:layout_height="70dp"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:background="@layout/border"-->
            <!--/>-->
            <EditText
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profileImage"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:hint="@string/first_name"
                android:textColor="@color/secondaryText"
                android:theme="@style/editTextStyle" />

            <EditText
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstNameText"
                android:layout_marginBottom="15dp"
                android:hint="@string/last_name"
                android:textColor="@color/secondaryText"
                android:theme="@style/editTextStyle" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastNameText"
                android:layout_marginBottom="15dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/secondaryText"
                android:theme="@style/editTextStyle" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailText"
                android:layout_marginBottom="15dp"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:textColor="@color/secondaryText"
                android:theme="@style/editTextStyle" />

            <Button
                android:id="@+id/saveProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneNumber"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"
                android:text="Save"
                android:textColor="@color/iconText" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
